<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/base_dialog_width"
    android:layout_height="@dimen/base_dialog_height"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_space"
        android:paddingHorizontal="@dimen/base_space"
        android:text="@string/alphabet"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/rg_way"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <RadioGroup
        android:id="@+id/rg_way"
        android:layout_width="@dimen/base_dialog_width"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/base_space"
        android:checkedButton="@id/rb_alphabet"
        app:layout_constraintBottom_toTopOf="@+id/rg_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title">

        <RadioButton
            android:id="@+id/rb_alphabet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alphabet" />

        <RadioButton
            android:id="@+id/rb_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/value" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/rg_type"
        android:layout_width="@dimen/base_dialog_width"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/base_space"
        android:checkedButton="@id/rb_ascending"
        app:layout_constraintBottom_toTopOf="@+id/btn_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_way">

        <RadioButton
            android:id="@+id/rb_ascending"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ascending" />

        <RadioButton
            android:id="@+id/rb_descending"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descending" />

    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_space"
        android:layout_marginBottom="@dimen/base_space"
        android:text="@string/apply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/rg_type"
        app:layout_constraintStart_toStartOf="@+id/rg_type"
        app:layout_constraintTop_toBottomOf="@+id/rg_type" />

</androidx.constraintlayout.widget.ConstraintLayout>